--- a/www/routines.html
+++ b/www/routines.html
@@ -9,6 +9,7 @@
                 <th>person</th>
                 <th>name</th>
                 <th>status</th>
+                <th>updated</th>
             </tr>
         </thead>
         <tbody>
@@ -100,6 +101,7 @@
                             {{?}}
                         {{?}}
                     </td>
+                    <td>{{=(new Date(routine.updated*1000)).toLocaleString()}}</td>
                 </tr>
                 {{?routine.data.tasks}}
                     {{~routine.data.tasks :task:index}}
@@ -166,6 +168,7 @@
                                     {{?}}
                                 {{?}}
                             </td>
+                            <td></td>
                         </tr>
                     {{~}}
                 {{?}}
