--- a/www/todos.html
+++ b/www/todos.html
@@ -9,6 +9,7 @@
                 <th>person</th>
                 <th>name</th>
                 <th>status</th>
+                <th>updated</th>
             </tr>
         </thead>
         <tbody>
@@ -91,6 +92,7 @@
                         {{?}}
                     {{?}}
                 </td>
+                <td>{{=(new Date(todo.updated*1000)).toLocaleString()}}</td>
             </tr>
             {{~}}
         </tbody>
